--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@ background: #051166;
 <body>
     <div class="bungkus-loding">
   <div class="cake-domain">
-  <img id="loading" src="img/loading.png" alt="">
-  <img id="api" src="img/api.gif" alt="">
+  <img id="loading" src="loading.png" alt="">
+  <img id="api" src="api.gif" alt="">
   <button id="padam" onclick="mati()">tiup lilin..!</button>
   </div>
   </div>
@@ -171,13 +171,13 @@ background: #051166;
     <logo id='logo'>
     
     </logo>
-    <img id="cake" src="img/kueh.jpg" alt="">
+    <img id="cake" src="kueh.jpg" alt="">
    </div>
 
   <div class="isi">
-   <img id="ultah" src="img/ultah.jpg" alt="">
+   <img id="ultah" src="ultah.jpg" alt="">
   </div>
-  <img class="decoration" src="img/decoration.png" alt="">
+  <img class="decoration" src="decoration.png" alt="">
   <div class="ultah">
     <div id="kata">
    <ultah id="isi">"Happy Birthday,</ultah>
@@ -230,15 +230,15 @@ const loading = document.querySelector('.bungkus-loding')
   }
   function audio(nama){
   if(nama === 'zahra'){
-  const zahra = new Audio('mp3/Zahra.mp3')
+  const zahra = new Audio('Zahra.mp3')
 zahra.play()
   }
   if(nama === 'dede'){
-  const dede = new Audio('mp3/Dede.mp3.aac')
+  const dede = new Audio('Dede.mp3.aac')
 dede.play()
   }
   if(nama === 'nanda'){
-  const nanda = new Audio('mp3/Nanda.mp3.aac')
+  const nanda = new Audio('Nanda.mp3.aac')
 nanda.play()
   }
   }
